--- a/styles/explore.css
+++ b/styles/explore.css
@@ -299,6 +299,7 @@ ul li {
 #hamburger-menu:checked ~ li {
   display: block;
 }
+
 /* main 
 --------------------*/
 .main-wrapper {
@@ -337,7 +338,6 @@ h1 {
   color: #fff;
   text-align: center;
   padding: 12px;
-  border-radius: 50px 0;
 }
 h2,
 h3 {
@@ -425,6 +425,7 @@ section.newsletter {
   padding-top: 16px;
 }
 form.newsletter {
+  width: 100%;
   display: flex;
   justify-content: center;
   height: 40px;
@@ -432,7 +433,7 @@ form.newsletter {
 }
 #newsletter {
   font-family: var(--sofia);
-  font-size: 1.125rem;
+  font-size: 1rem;
   width: 70%;
   height: 40px;
   border: 3px solid var(--dark-purple);
@@ -440,7 +441,7 @@ form.newsletter {
 }
 #sign-up {
   font-family: var(--sofia);
-  font-size: 1.125rem;
+  font-size: 1rem;
   width: 30%;
   height: 40px;
   border: 3px solid var(--dark-purple);
