--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -320,9 +320,7 @@ h1 {
   text-align: center;
   background-color: var(--dark-purple);
   color: #fff;
-  padding: 8px;
-  border-radius: 0 15px 0 15px;
-  padding-left: 5%;
+  padding: 12px;
 }
 h2 {
   margin-left: 5%;
@@ -395,6 +393,7 @@ section.newsletter {
   padding-top: 16px;
 }
 form.newsletter {
+  width: 100%;
   display: flex;
   justify-content: center;
   height: 40px;
@@ -402,7 +401,7 @@ form.newsletter {
 }
 #newsletter {
   font-family: var(--sofia);
-  font-size: 1.125rem;
+  font-size: 1rem;
   width: 70%;
   height: 40px;
   border: 3px solid var(--dark-purple);
@@ -410,7 +409,7 @@ form.newsletter {
 }
 #sign-up {
   font-family: var(--sofia);
-  font-size: 1.125rem;
+  font-size: 1rem;
   width: 30%;
   height: 40px;
   border: 3px solid var(--dark-purple);
