--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -317,10 +317,10 @@ h1 {
   font-size: 1.5rem;
   font-weight: bold;
   text-transform: capitalize;
-  text-align: center;
+  text-align: left;
   background-color: var(--dark-purple);
   color: #fff;
-  padding: 12px;
+  padding: 12px 16px;
 }
 h2 {
   text-align: center;
