--- a/styles/home.css
+++ b/styles/home.css
@@ -477,21 +477,20 @@ h4 {
   font-family: var(--proxima);
   font-size: 1.25rem;
   font-weight: bold;
+  text-align: left;
   background-color: var(--dark-blue);
   color: var(--white);
   display: block;
-  padding: 15px 0;
+  padding: 15px 16px;
   margin-bottom: 0;
-  text-align: center;
 }
 figure.news {
   width: 100%;
-  height: 290px;
   margin: 0;
+  position: relative;
 }
 figure.news img {
   width: 100%;
-  height: 290px;
 }
 h5 {
   text-align: left;
@@ -509,17 +508,48 @@ div.news {
   margin: 0 auto;
   text-align: left;
 }
+.angle-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--dark);
+}
+.angle-wrapper > div {
+  width: 20px;
+  height: 20px;
+  border: 3px solid #000;
+  border-radius: 50%;
+  background-color: #fff;
+}
+.angle {
+  color: #000;
+  font-size: 3rem;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-bottom: 0;
+}
+section.clubs {
+  width: 100%;
+  margin: 0 auto;
+  background-color: var(--dark-blue);
+}
 div.image-wrapper {
   display: flex;
+  flex-direction: column;
+}
+#clubs {
+  text-align: center;
 }
 figure.clubs {
-  width: 50%;
-  height: 200px;
-  margin: 0;
+  width: 90%;
+  margin: 0 auto;
+  /* border: 4px solid var(--dark-blue); */
+  border-radius: 15px;
+  padding-bottom: 16px;
 }
 figure.clubs img {
   width: 100%;
-  height: 200px;
+  border-radius: 15px;
 }
 h6 {
   font-size: 1rem;
