--- a/styles/explore.css
+++ b/styles/explore.css
@@ -314,7 +314,6 @@ section {
 section.for-kids {
   background-color: var(--blue);
   color: #fff;
-  border-radius: 15px 0;
 }
 section.newsletter {
   width: 100%;
@@ -329,15 +328,15 @@ section.newsletter {
   margin-top: 0;
 }
 h1 {
-  margin: 32px auto 16px auto;
   font-family: var(--proxima);
   font-size: 1.5rem;
   font-weight: bold;
   text-transform: uppercase;
   background-color: var(--dark-purple);
   color: #fff;
-  text-align: center;
-  padding: 12px;
+  margin: 32px 16px 32px 0;
+  padding: 12px 32px;
+  border-radius: 0 0 50px 0;
 }
 h2,
 h3 {
