--- a/styles/home.css
+++ b/styles/home.css
@@ -331,7 +331,8 @@ h1 {
   /* background-color: olive; */
 }
 h2 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  text-align: center;
 }
 /* em {
   text-decoration: underline;
@@ -341,6 +342,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 0;
   /* background-color: lightseagreen; */
 }
 .fa-clock {
@@ -348,13 +350,14 @@ h2 {
   font-size: 1.5rem;
 }
 p.button {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   display: inline-block;
   text-align: center;
   border-radius: 15px;
   background-color: var(--dark-purple);
   color: var(--white);
-  padding: 12px 50px;
+  padding: 8px 32px;
+  margin-bottom: 16px;
 }
 p.button::after {
   content: "\002A";
@@ -378,7 +381,6 @@ p.button::after {
   margin: 0 auto;
   padding-bottom: 32px;
 }
-
 .bubble::before {
   content: "";
   position: absolute;
@@ -475,14 +477,14 @@ h3 {
 }
 h4 {
   font-family: var(--proxima);
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   font-weight: bold;
   text-align: left;
   background-color: var(--dark-blue);
   color: var(--white);
   display: block;
-  padding: 15px 16px;
-  margin-bottom: 0;
+  padding: 12px 32px;
+  margin: 32px 0 0 0;
 }
 figure.news {
   width: 100%;
@@ -512,7 +514,6 @@ div.news {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--dark);
 }
 .angle-wrapper > div {
   width: 20px;
@@ -531,25 +532,41 @@ div.news {
 section.clubs {
   width: 100%;
   margin: 0 auto;
-  background-color: var(--dark-blue);
+  background-color: var(--light-grey);
 }
 div.image-wrapper {
   display: flex;
   flex-direction: column;
 }
 #clubs {
-  text-align: center;
+  margin: 32px 16px 16px 0;
+  border-radius: 0 0 50px 0;
+  /* text-align: center;
+  background-color: var(--light-grey);
+  color: var(--dark-blue);
+*/
 }
+
 figure.clubs {
   width: 90%;
   margin: 0 auto;
   /* border: 4px solid var(--dark-blue); */
   border-radius: 15px;
-  padding-bottom: 16px;
+  padding-bottom: 8px;
 }
 figure.clubs img {
   width: 100%;
   border-radius: 15px;
+}
+figcaption {
+  margin-bottom: 16px;
+}
+.clubs p {
+  background-color: var(--light-purple);
+  color: #fff;
+  padding: 12px;
+  margin: 16px;
+  border-radius: 50px 50px 0 0;
 }
 h6 {
   font-size: 1rem;
