--- a/styles/contact.css
+++ b/styles/contact.css
@@ -308,10 +308,6 @@ ul li {
   width: 100%;
   margin: 0 auto;
 }
-section {
-  width: 90%;
-  margin: 0 auto;
-}
 h1 {
   font-family: var(--proxima);
   font-size: 1.5rem;
@@ -323,80 +319,81 @@ h1 {
   padding: 12px 32px;
   border-radius: 0 0 50px 0;
 }
-h2,
-h3 {
-  margin-left: 5%;
-  font-family: var(--proxima);
-  font-size: 1.5rem;
-  padding-top: 16px;
-  margin-top: 0;
-}
-div.info {
-  width: 100%;
-  background-color: var(--light-grey);
-  margin-bottom: 16px;
-}
-#street {
-  font-weight: bold;
-  font-size: 1.125rem;
-  padding: 0;
-}
-#postal {
-  font-weight: bold;
-  font-size: 1.125rem;
-  margin-bottom: 32px;
-}
-iframe {
-  width: 100%;
-  border: none;
-}
-div.facilities {
-  width: 100%;
-  height: 250px;
-  color: #fff;
-  margin-bottom: 16px;
-  margin-top: 0;
-}
-div.info p,
-div.facilities p {
+section {
   width: 90%;
   margin: 0 auto;
-  padding-bottom: 16px;
+  /* background-color: teal; */
 }
-.hours-wrapper_2 {
-  display: flex;
-  justify-content: flex-start;
-}
-.hours-wrapper_2 ul {
-  padding: 0;
-  margin-left: 5%;
-  margin-right: 10%;
-}
-.hours-wrapper_2 li {
+section p {
   font-family: var(--sofia);
+  font-weight: bold;
+}
+form {
+  width: 100%;
+}
+.form {
+  display: inline-block;
+  width: 100%;
+  font-size: 1.125rem;
+  border-radius: 0;
+  border: 2px solid #00000040;
+  padding: 12px;
+  border-radius: 5px;
+  transition-property: border;
+  transition-duration: 0.5s;
+}
+#email_2 {
+  padding: 8px 12px;
+  font-family: var(--neue-haas);
+}
+#name {
+  padding: 8px 12px;
+  font-family: var(--neue-haas);
+}
+#option {
+  padding: 8px 12px;
+  font-family: var(--neue-haas);
+  font-size: 1rem;
+}
+#text {
+  font-family: var(--neue-haas);
+  color: #00000040;
+  padding: 8px 12px;
+}
+button {
+  display: block;
+  font-family: var(--sofia);
+  font-size: 1.5rem;
+  background-color: var(--magenta);
+  color: #fff;
+  padding: 8px 50px;
+  margin: 16px auto 50px auto;
+  border: none;
+  border-radius: 15px;
+}
+h2 {
+  font-family: var(--proxima);
   font-size: 1.25rem;
-  list-style: none;
-  /* background-color: violet; */
+  text-decoration: underline;
 }
-figure.facilities {
-  width: 100%;
-  height: 250px;
-  margin: 0 auto;
+.faq {
+  padding-left: 32px;
+  /* background-color: teal; */
 }
-.facilities img {
-  width: 100%;
-  height: 250px;
-  margin: 0;
+.faq > li {
+  font-family: var(--sofia);
+  font-weight: bold;
+  font-size: 1.125rem;
 }
-#accessibility {
-  background-color: var(--orange);
+li > P {
+  font-family: var(--neue-haas);
+  font-size: 0.875rem;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 16px;
+  margin: 5px 16px 16px 16px;
 }
-#food-drink {
-  background-color: var(--dark-green);
-}
-#shop {
-  background-color: var(--blue);
-}
+
 .newsletter-wrapper {
   background-image: url(../images/newsletter.jpg);
   background-size: cover;
