--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -312,7 +312,6 @@ section.main-content {
   margin: 0 auto;
 }
 h1 {
-  margin: 32px auto 16px auto;
   font-family: var(--proxima);
   font-size: 1.5rem;
   font-weight: bold;
@@ -321,13 +320,16 @@ h1 {
   background-color: var(--dark-purple);
   color: #fff;
   padding: 12px 16px;
+  margin: 32px 16px 32px 0;
+  border-radius: 0 0 50px 0;
 }
 h2 {
   text-align: center;
   font-size: 1.5rem;
   color: #fff;
   border-radius: 25px 25px 0 0;
-  padding: 16px;
+  padding: 12px;
+  margin: 0;
 }
 .fa-arrow-circle-left {
   display: none;
@@ -376,14 +378,14 @@ h2 {
 div.card {
   width: 100%;
   min-height: 415px;
-  border-radius: 20px;
+  border-radius: 25px;
   box-shadow: 0 6px 12px #00000029;
-  margin-bottom: 16px;
+  padding-bottom: 16px;
 }
 div.card p {
-  width: 90%;
-  margin: 0 auto;
-  padding-bottom: 16px;
+  /* font-family: var(--neue-haas); */
+  font-size: 1rem;
+  padding-top: 0;
 }
 figure.card {
   width: 100%;
@@ -403,6 +405,7 @@ figure.card img {
 .cosmology {
   width: 90%;
   margin: 0 auto;
+  padding: 32px;
   background-image: url(../images/icons/globe-americas.svg);
   background-repeat: no-repeat;
 }
@@ -431,7 +434,7 @@ figure.card img {
   width: 90%;
   margin: 0 auto;
   background-image: url(../images/icons/tellus.png);
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
 }
 section.photo-gallery {
