--- a/styles/home.css
+++ b/styles/home.css
@@ -760,3 +760,23 @@ h6 {
 
 /* styles that change
 --------------------*/
+@media only screen and (min-width: 1200px) {
+  /* Footer
+--------------------*/
+  .footer-wrapper {
+    font-size: 1.125rem;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .footer-container {
+    margin-left: 5%;
+    margin-right: 5%;
+    /* background-color: green; */
+  }
+  ul.connect {
+    flex-direction: column;
+  }
+  .connect li {
+    padding: 8px;
+  }
+}
