--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -41,16 +41,18 @@ a {
 /* search-dropdown */
 .search-label {
   cursor: pointer;
-  position: relative;
 }
 .search-dropdown {
   position: absolute;
   z-index: 1000;
-  top: 138px;
+  top: 137px;
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: #fff;
+  border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple);
+  border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
 .search-header {
@@ -94,11 +96,14 @@ form {
 .ticket-dropdown {
   position: absolute;
   z-index: 1000;
-  top: 138px;
+  top: 137px;
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: #fff;
+  border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple);
+  border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
 .ticket-header {
@@ -113,10 +118,29 @@ form {
   padding: 17px;
   border-radius: 50px 0 50px 0;
 }
+form.ticket {
+  margin: 0 auto;
+}
+#select {
+  font-family: var(--proxima-soft);
+  font-size: 1.125rem;
+  font-weight: bold;
+  border: 2px solid var(--dark-purple);
+  border-radius: 15px;
+  padding: 10px;
+  background-color: var(--light-grey);
+}
+#select option {
+  font-family: var(--proxima-soft);
+  font-size: 1.125rem;
+  font-weight: bold;
+  border: 2px solid var(--dark-purple);
+  background-color: var(--light-grey);
+}
 button.ticket {
   display: block;
   font-family: var(--sofia);
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   background-color: var(--magenta);
   color: #fff;
   padding: 8px 50px;
@@ -130,7 +154,7 @@ button.ticket {
 #ticket-box ~ .ticket-dropdown {
   display: none;
 }
-#ticket-box:checked ~ div {
+#ticket-box:checked ~ .ticket-dropdown {
   display: block;
 }
 
@@ -142,11 +166,14 @@ button.ticket {
 .profile-dropdown {
   position: absolute;
   z-index: 1000;
-  top: 138px;
+  top: 137px;
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: #fff;
+  border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple);
+  border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
 .profile-header {
@@ -161,7 +188,6 @@ button.ticket {
   padding: 17px;
   border-radius: 50px 0 50px 0;
 }
-
 form.label {
   font-family: var(--neue-haas);
 }
@@ -181,7 +207,7 @@ input.box {
 button.profile {
   display: block;
   font-family: var(--sofia);
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   background-color: var(--magenta);
   color: #fff;
   padding: 8px 50px;
@@ -225,27 +251,27 @@ nav.icons {
 .icons li {
   list-style: none;
 }
-.white-box {
+/* .white-box {
   background-color: #ffffff;
   width: 100%;
   height: 62px;
-}
+} */
 nav.menu {
   position: sticky;
   top: 0;
   z-index: 100;
+  padding: 0;
+  margin: 0;
   background-color: var(--magenta);
   color: var(--white);
   font-family: var(--proxima-soft);
   font-size: 1.5rem;
   display: flex;
-  /* border-radius: 30px 0 30px 0; */
   margin-bottom: 0;
 }
 header {
   display: inline;
 }
-
 /* mobile menu */
 .fa-bars {
   font-size: 1.875rem;
@@ -263,8 +289,6 @@ ul.mobile-menu {
 }
 ul.large-screen {
   display: none;
-  justify-content: space-around;
-  width: 100%;
 }
 ul li {
   list-style: none;
@@ -310,6 +334,8 @@ ul li {
 section.main-content {
   width: 90%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 h1 {
   font-family: var(--proxima);
@@ -326,7 +352,6 @@ h2 {
   margin-left: 5%;
   font-family: var(--proxima);
   font-size: 1.5rem;
-  padding-top: 16px;
 }
 div.support {
   width: 100%;
@@ -339,11 +364,15 @@ div.support p {
   padding-bottom: 16px;
 }
 .get-in-touch {
+  width: 90%;
+  margin: 0 auto;
   background-color: #7c68a6;
   color: #fff;
   font-size: 1.125rem;
   text-align: center;
   border-radius: 0 15px 0 15px;
+  display: flex;
+  flex-direction: column;
 }
 .get-in-touch > p {
   font-family: var(--proxima);
@@ -367,37 +396,43 @@ p.button {
   background-image: url(../images/newsletter.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 360px;
+  height: 300px;
   margin-top: 32px;
   margin-bottom: 0;
 }
 .blur {
   background-color: #ffffffa6;
   margin-bottom: 0;
+  height: 150px;
   position: relative;
-  top: 200px;
-  margin-bottom: 0;
+  top: 150px;
 }
 section.newsletter {
   width: 90%;
-  margin: 0 auto;
-  text-align: center;
-  height: 140px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  /* background-color: green; */
 }
 .newsletter p {
+  display: block;
   font-family: var(--neue-haas);
   font-size: 0.875rem;
   font-weight: bold;
-  text-transform: uppercase;
+  text-transform: capitalize;
   text-align: left;
+  max-width: 328px;
   padding-top: 16px;
+  margin: 0;
 }
 form.newsletter {
   width: 100%;
+  max-width: 600px;
+  height: 40px;
+  margin: 16px auto;
   display: flex;
   justify-content: center;
-  height: 40px;
-  margin: 0 auto;
 }
 #newsletter {
   font-family: var(--sofia);
@@ -406,6 +441,7 @@ form.newsletter {
   height: 40px;
   border: 3px solid var(--dark-purple);
   padding-left: 20px;
+  flex: 2;
 }
 #sign-up {
   font-family: var(--sofia);
@@ -415,7 +451,9 @@ form.newsletter {
   border: 3px solid var(--dark-purple);
   background-color: var(--dark-purple);
   color: #fff;
+  flex: 1;
 }
+
 /* footer 
 --------------------*/
 footer {
@@ -504,6 +542,200 @@ h6 {
 /* styles that change
 --------------------*/
 @media only screen and (min-width: 1200px) {
+  /* Header
+--------------------*/
+  .header-wrapper {
+    width: 90%;
+    margin: 0 auto;
+    flex-direction: row;
+    justify-content: space-between;
+    /* background-color: lightblue; */
+  }
+  .logo {
+    width: 500px;
+    margin-left: 128px;
+  }
+  .logo img {
+    width: 500px;
+  }
+  nav.icons {
+    justify-content: flex-end;
+    margin-top: 32px;
+    margin-bottom: 32px;
+  }
+  .search-label,
+  .profile-label,
+  .ticket-label {
+    margin-left: 64px;
+  }
+  .icons label span {
+    font-size: 4rem;
+  }
+  .search-dropdown,
+  .ticket-dropdown,
+  .profile-dropdown {
+    width: 400px;
+    top: 128px;
+  }
+  .search-dropdown {
+    right: 18.5%;
+  }
+  .ticket-dropdown {
+    right: 12.5%;
+  }
+  .profile-dropdown {
+    right: 6.5%;
+  }
+  nav.menu {
+    height: 60px;
+    border-radius: 0 100px 0 0;
+    align-items: center;
+  }
+  ul.mobile-menu {
+    display: none;
+  }
+  ul.large-screen {
+    display: flex;
+    justify-content: space-around;
+    width: 90%;
+  }
+  .large-screen li {
+    position: relative;
+  }
+  .purple-box {
+    display: block;
+    text-align: center;
+    background-color: var(--dark-purple);
+    width: 320px;
+    padding: 16px;
+    margin: 0;
+    /* border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple); */
+    border-radius: 70px 0 70px 0;
+  }
+  .purple-box:hover {
+    border-radius: 70px 0 0 0;
+  }
+  .inactive {
+    background-color: transparent;
+    /* border-left: 2px solid transparent;
+  border-right: 2px solid transparent; */
+  }
+  .inactive:hover {
+    /* border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple); */
+    background-color: #210759a6;
+  }
+  .dropdown-info {
+    font-size: 1.125rem;
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 320px;
+    background-color: #fff;
+    color: #000;
+    position: absolute;
+    left: 0;
+    border-left: 2px solid var(--dark-purple);
+    border-right: 2px solid var(--dark-purple);
+    border-bottom: 8px solid var(--dark-purple);
+    border-radius: 0 0 70px 0;
+    visibility: hidden;
+    opacity: 0;
+    display: none;
+  }
+  .large-screen li:hover > .dropdown-info {
+    visibility: visible;
+    opacity: 1;
+    display: block;
+  }
+  p.header {
+    font-family: var(--proxima);
+    font-weight: bold;
+    margin-top: 16px;
+  }
+  /* Main
+--------------------*/
+  h1 {
+    width: 90%;
+    font-size: 2.5rem;
+    text-transform: capitalize;
+    text-align: center;
+    margin-right: 0;
+    margin-left: 5%;
+    margin: 32px 0 16px 5%;
+    border-radius: 50px 0 50px 0;
+  }
+  h2 {
+    font-size: 1.875rem;
+  }
+  section.main-content {
+    font-size: 1.25rem;
+    flex-direction: row;
+    gap: 16px;
+  }
+  .get-in-touch {
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: center;
+    gap: 64px;
+  }
+  .get-in-touch p {
+    font-size: 1.5rem;
+  }
+  p.button {
+    font-size: 1.25rem;
+  }
+  /* Footer
+--------------------*/
+  .footer-wrapper {
+    font-size: 1.125rem;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .footer-container {
+    margin-left: 5%;
+    margin-right: 5%;
+    /* background-color: green; */
+  }
+  ul.connect {
+    flex-direction: column;
+  }
+  .connect li {
+    padding: 8px;
+  }
+  /* newsletter
+--------------------*/
+  .newsletter-wrapper {
+    width: 90%;
+    margin: 64px auto 32px auto;
+    border-radius: 0 0 50px 50px;
+  }
+  section.newsletter {
+    flex-direction: row;
+    align-items: center;
+    /* background-color: green; */
+  }
+  .newsletter p {
+    font-size: 1.125rem;
+    max-width: 400px;
+    margin-bottom: 16px;
+  }
+  form.newsletter {
+    height: 60px;
+  }
+  #newsletter {
+    font-size: 1.125rem;
+    height: 60px;
+    padding-left: 20px;
+    flex: 3;
+    border-radius: 25px 0 0 25px;
+  }
+  #sign-up {
+    font-family: var(--sofia);
+    font-size: 1.25rem;
+    height: 60px;
+    border-radius: 0 25px 25px 0;
+  }
   /* Footer
 --------------------*/
   .footer-wrapper {
