--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -32,6 +32,9 @@ a {
   text-decoration: none;
   color: #fff;
 }
+span {
+  display: block;
+}
 
 /* header 
 --------------------*/
@@ -41,16 +44,18 @@ a {
 /* search-dropdown */
 .search-label {
   cursor: pointer;
-  position: relative;
 }
 .search-dropdown {
   position: absolute;
   z-index: 1000;
-  top: 138px;
+  top: 137px;
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: #fff;
+  border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple);
+  border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
 .search-header {
@@ -94,11 +99,14 @@ form {
 .ticket-dropdown {
   position: absolute;
   z-index: 1000;
-  top: 138px;
+  top: 137px;
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: #fff;
+  border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple);
+  border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
 .ticket-header {
@@ -113,10 +121,29 @@ form {
   padding: 17px;
   border-radius: 50px 0 50px 0;
 }
+form.ticket {
+  margin: 0 auto;
+}
+#select {
+  font-family: var(--proxima-soft);
+  font-size: 1.125rem;
+  font-weight: bold;
+  border: 2px solid var(--dark-purple);
+  border-radius: 15px;
+  padding: 10px;
+  background-color: var(--light-grey);
+}
+#select option {
+  font-family: var(--proxima-soft);
+  font-size: 1.125rem;
+  font-weight: bold;
+  border: 2px solid var(--dark-purple);
+  background-color: var(--light-grey);
+}
 button.ticket {
   display: block;
   font-family: var(--sofia);
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   background-color: var(--magenta);
   color: #fff;
   padding: 8px 50px;
@@ -130,7 +157,7 @@ button.ticket {
 #ticket-box ~ .ticket-dropdown {
   display: none;
 }
-#ticket-box:checked ~ div {
+#ticket-box:checked ~ .ticket-dropdown {
   display: block;
 }
 
@@ -142,11 +169,14 @@ button.ticket {
 .profile-dropdown {
   position: absolute;
   z-index: 1000;
-  top: 138px;
+  top: 137px;
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: #fff;
+  border-left: 2px solid var(--dark-purple);
+  border-right: 2px solid var(--dark-purple);
+  border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
 }
 .profile-header {
@@ -161,7 +191,6 @@ button.ticket {
   padding: 17px;
   border-radius: 50px 0 50px 0;
 }
-
 form.label {
   font-family: var(--neue-haas);
 }
@@ -181,7 +210,7 @@ input.box {
 button.profile {
   display: block;
   font-family: var(--sofia);
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   background-color: var(--magenta);
   color: #fff;
   padding: 8px 50px;
@@ -225,27 +254,27 @@ nav.icons {
 .icons li {
   list-style: none;
 }
-.white-box {
+/* .white-box {
   background-color: #ffffff;
   width: 100%;
   height: 62px;
-}
+} */
 nav.menu {
   position: sticky;
   top: 0;
   z-index: 100;
+  padding: 0;
+  margin: 0;
   background-color: var(--magenta);
   color: var(--white);
   font-family: var(--proxima-soft);
   font-size: 1.5rem;
   display: flex;
-  /* border-radius: 30px 0 30px 0; */
   margin-bottom: 0;
 }
 header {
   display: inline;
 }
-
 /* mobile menu */
 .fa-bars {
   font-size: 1.875rem;
@@ -263,8 +292,6 @@ ul.mobile-menu {
 }
 ul.large-screen {
   display: none;
-  justify-content: space-around;
-  width: 100%;
 }
 ul li {
   list-style: none;
@@ -311,7 +338,7 @@ section.main-content {
   width: 90%;
   margin: 0 auto;
 }
-.item {
+.card-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -323,7 +350,7 @@ h1 {
   font-family: var(--proxima);
   font-size: 1.5rem;
   font-weight: bold;
-  text-transform: capitalize;
+  text-transform: uppercase;
   text-align: left;
   background-color: var(--dark-purple);
   color: #fff;
@@ -339,9 +366,7 @@ h2 {
   padding: 12px;
   margin: 0;
 }
-.fa-arrow-circle-left {
-  display: none;
-}
+.fa-arrow-circle-left,
 .fa-arrow-circle-right {
   display: none;
 }
@@ -350,7 +375,7 @@ h2 {
   font-size: 4rem;
   text-align: center;
   margin: 16px auto;
-  opacity: 0.5;
+  /* opacity: 0.5; */
 }
 .purple {
   color: var(--purple);
@@ -383,8 +408,9 @@ h2 {
   background-color: var(--magenta);
 }
 div.card {
+  background-color: #fff;
   width: 325px;
-  min-height: 415px;
+  min-height: 450px;
   border-radius: 25px;
   box-shadow: 0 6px 12px #00000029;
   padding-bottom: 16px;
@@ -393,48 +419,49 @@ div.card p {
   /* font-family: var(--neue-haas); */
   width: 90%;
   margin: 16px auto;
-  font-size: 1rem;
+  font-size: 0.875rem;
   padding-top: 0;
 }
-figure.card {
+figure.card-large {
+  display: none;
+}
+figure.card,
+figure.card-large {
   width: 325px;
-  height: 415px;
+  height: 450px;
   margin: 0 auto;
-  border: 15px solid #fff;
-  border-radius: 20px;
+  border: 16px solid #fff;
+  border-radius: 25px;
   box-shadow: 0 6px 12px #00000029;
   margin-bottom: 64px;
 }
-figure.card img {
+figure.card img,
+figure.card-large img {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  border-radius: 20px;
+  border-radius: 10px;
+}
+div.background {
+  height: 330px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .cosmology {
-  background-image: url(../images/icons/globe-americas.svg);
-  background-repeat: no-repeat;
-  background-size: 90%;
+  background-image: url(../images/icons/tellus.png);
 }
 .evolution {
   background-image: url(../images/icons/dna.png);
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 .biology {
   background-image: url(../images/icons/microscope.png);
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 .robotics {
   background-image: url(../images/icons/robot.png);
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 .ecology {
   background-image: url(../images/icons/tellus.png);
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 section.photo-gallery {
   width: 100%;
@@ -481,37 +508,43 @@ p.visit {
   background-image: url(../images/newsletter.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 360px;
+  height: 300px;
   margin-top: 32px;
   margin-bottom: 0;
 }
 .blur {
   background-color: #ffffffa6;
   margin-bottom: 0;
+  height: 150px;
   position: relative;
-  top: 200px;
-  margin-bottom: 0;
+  top: 150px;
 }
 section.newsletter {
   width: 90%;
-  margin: 0 auto;
-  text-align: center;
-  height: 140px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  /* background-color: green; */
 }
 .newsletter p {
+  display: block;
   font-family: var(--neue-haas);
   font-size: 0.875rem;
   font-weight: bold;
-  text-transform: uppercase;
+  text-transform: capitalize;
   text-align: left;
+  max-width: 328px;
   padding-top: 16px;
+  margin: 0;
 }
 form.newsletter {
   width: 100%;
+  max-width: 600px;
+  height: 40px;
+  margin: 16px auto;
   display: flex;
   justify-content: center;
-  height: 40px;
-  margin: 0 auto;
 }
 #newsletter {
   font-family: var(--sofia);
@@ -520,6 +553,7 @@ form.newsletter {
   height: 40px;
   border: 3px solid var(--dark-purple);
   padding-left: 20px;
+  flex: 2;
 }
 #sign-up {
   font-family: var(--sofia);
@@ -529,7 +563,9 @@ form.newsletter {
   border: 3px solid var(--dark-purple);
   background-color: var(--dark-purple);
   color: #fff;
+  flex: 1;
 }
+
 /* footer 
 --------------------*/
 footer {
@@ -605,6 +641,7 @@ h6 {
 }
 #copyright {
   font-family: var(--neue-haas);
+  display: block;
   text-align: center;
   margin: 0;
   padding: 8px 0;
@@ -617,6 +654,117 @@ h6 {
 /* styles that change
 --------------------*/
 @media only screen and (min-width: 1200px) {
+  /* Header
+--------------------*/
+  .header-wrapper {
+    width: 90%;
+    margin: 0 auto;
+    flex-direction: row;
+    justify-content: space-between;
+    /* background-color: lightblue; */
+  }
+  .logo {
+    width: 500px;
+    margin-left: 128px;
+  }
+  .logo img {
+    width: 500px;
+  }
+  nav.icons {
+    justify-content: flex-end;
+    margin-top: 32px;
+    margin-bottom: 32px;
+  }
+  .search-label,
+  .profile-label,
+  .ticket-label {
+    margin-left: 64px;
+  }
+  .icons label span {
+    font-size: 4rem;
+  }
+  .search-dropdown,
+  .ticket-dropdown,
+  .profile-dropdown {
+    width: 400px;
+    top: 128px;
+  }
+  .search-dropdown {
+    right: 18.5%;
+  }
+  .ticket-dropdown {
+    right: 12.5%;
+  }
+  .profile-dropdown {
+    right: 6.5%;
+  }
+  nav.menu {
+    height: 60px;
+    border-radius: 0 100px 0 0;
+    align-items: center;
+  }
+  ul.mobile-menu {
+    display: none;
+  }
+  ul.large-screen {
+    display: flex;
+    justify-content: space-around;
+    width: 90%;
+  }
+  .large-screen li {
+    position: relative;
+  }
+  .purple-box {
+    display: block;
+    text-align: center;
+    background-color: var(--dark-purple);
+    width: 320px;
+    padding: 16px;
+    margin: 0;
+    /* border-left: 2px solid var(--dark-purple);
+border-right: 2px solid var(--dark-purple); */
+    border-radius: 70px 0 70px 0;
+  }
+  .purple-box:hover {
+    border-radius: 70px 0 0 0;
+  }
+  .inactive {
+    background-color: transparent;
+    /* border-left: 2px solid transparent;
+border-right: 2px solid transparent; */
+  }
+  .inactive:hover {
+    /* border-left: 2px solid var(--dark-purple);
+border-right: 2px solid var(--dark-purple); */
+    background-color: #210759a6;
+  }
+  .dropdown-info {
+    font-size: 1.125rem;
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 320px;
+    background-color: #fff;
+    color: #000;
+    position: absolute;
+    left: 0;
+    border-left: 2px solid var(--dark-purple);
+    border-right: 2px solid var(--dark-purple);
+    border-bottom: 8px solid var(--dark-purple);
+    border-radius: 0 0 70px 0;
+    visibility: hidden;
+    opacity: 0;
+    display: none;
+  }
+  .large-screen li:hover > .dropdown-info {
+    visibility: visible;
+    opacity: 1;
+    display: block;
+  }
+  p.header {
+    font-family: var(--proxima);
+    font-weight: bold;
+    margin-top: 16px;
+  }
   /* Main
 --------------------*/
   section.main-content {
@@ -628,49 +776,119 @@ h6 {
   }
   h1.large-screen {
     display: block;
+    font-size: 2.5rem;
     width: 90%;
-    margin: 50px auto 16px auto;
-    font-size: 2rem;
+    margin: 50px auto 32px auto;
     text-transform: capitalize;
     text-align: center;
     border-radius: 0;
   }
-  .item {
+  .card-wrapper {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     /* background-color: lightblue; */
   }
+  h2 {
+    font-size: 2.5rem;
+  }
   div.card {
-    width: 690px;
+    min-width: 675px;
+    height: 450px;
     margin-bottom: 64px;
     margin-left: 5%;
+    margin-right: 5%;
+  }
+  div.card p {
+    font-size: 1.25rem;
   }
   figure.card {
-    width: 690px;
-    margin-right: 5%;
+    display: none;
   }
   .fa-arrow-circle-down {
     display: none;
   }
-  .fa-arrow-circle-left {
+  figure.card-large {
     display: block;
-    font-size: 5rem;
-    padding: 0;
+    min-width: 675px;
+    height: 450px;
     margin-left: 5%;
+    margin-right: 5%;
   }
+  div.reverse {
+    order: 3;
+  }
+  figure.reverse {
+    order: 1;
+  }
+  span.reverse {
+    order: 2;
+  }
+  .fa-arrow-circle-down {
+    display: none;
+  }
+  .fa-arrow-circle-left,
   .fa-arrow-circle-right {
     display: block;
-    font-size: 5rem;
-    margin-left: 5%;
+    font-size: 6rem;
+    margin-bottom: 50px;
   }
-
+  h3 {
+    width: 90%;
+    margin: 64px auto 16px auto;
+    font-size: 2rem;
+    text-align: center;
+  }
+  .photo-gallery img {
+    width: 275px;
+    height: 275px;
+    border-radius: 15px;
+    /* opacity: 0.65; */
+  }
+  p.visit {
+    width: 90%;
+    margin: 16px auto 64px auto;
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  /* newsletter
+--------------------*/
+  .newsletter-wrapper {
+    width: 90%;
+    margin: 64px auto 32px auto;
+    border-radius: 0 0 50px 50px;
+  }
+  section.newsletter {
+    flex-direction: row;
+    align-items: center;
+    /* background-color: green; */
+  }
+  .newsletter p {
+    font-size: 1.125rem;
+    max-width: 400px;
+    margin-bottom: 16px;
+  }
+  form.newsletter {
+    height: 60px;
+  }
+  #newsletter {
+    font-size: 1.125rem;
+    height: 60px;
+    padding-left: 20px;
+    flex: 3;
+    border-radius: 25px 0 0 25px;
+  }
+  #sign-up {
+    font-family: var(--sofia);
+    font-size: 1.25rem;
+    height: 60px;
+    border-radius: 0 25px 25px 0;
+  }
   /* Footer
 --------------------*/
   .footer-wrapper {
     font-size: 1.125rem;
     flex-direction: row;
-    align-items: center;
     justify-content: space-around;
   }
   .footer-container {
